[package]
name = "getup"
version = "0.1.0"
authors = ["Abhilash Raj <raj.abhilash1@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://github.com/maxking/getup"
repository = "https://github.com/maxking/getup"
default-run = "getupd"
description = """
Getup, an init system meant for Linux.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "*"
rust-ini = "0.13.0"
ctrlc = "*"
daemonize = "0.4.1"
hyper = "0.12"
hyper-router = "^0.5"
futures = "0.1"
lazy_static = "1.4.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive", "rc"] }
nix = "*"

[lib]
name = "getup"
path = "src/lib.rs"
